<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/app_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.merchants.loopx.ui.fragments.HomeFragment"
        android:label="@string/title_home" />
    <fragment
        android:id="@+id/transactionFragment"
        android:name="com.merchants.loopx.ui.fragments.TransactionFragment"
        android:label="@string/title_transaction" />
    <fragment
        android:id="@+id/earningFragment"
        android:name="com.merchants.loopx.ui.fragments.EarningFragment"
        android:label="@string/title_earning" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.merchants.loopx.ui.fragments.ProfileFragment"
        android:label="@string/title_profile" />
</navigation>