<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logoWidth"
            android:layout_height="@dimen/logoWidth"
            android:src="@drawable/loopxblack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wlcmtoloopx"
            android:textColor="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/shopName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_border"
            android:hint="@string/shopName"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTxt" />

        <EditText
            android:id="@+id/shopAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_border"
            android:hint="@string/shopAddress"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shopName" />

        <EditText
            android:id="@+id/ownerName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_border"
            android:hint="@string/ownerName"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shopAddress" />

        <EditText
            android:id="@+id/ownerMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_border"
            android:hint="@string/ownerMobile"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerName" />


        <EditText
            android:id="@+id/ownerEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_border"
            android:hint="@string/ownerEmail"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerMobile" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_backgroud"
            android:gravity="center"
            android:paddingStart="@dimen/paddingStart"
            android:paddingEnd="@dimen/paddingStart"
            android:text="@string/signUp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ownerEmail" />

        <TextView
            android:id="@+id/alreadyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/editTextBoxMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:gravity="center"
            android:text="@string/alreadyAccount"
            android:textColor="@color/white"
            android:textSize="@dimen/secondaryTxtSize"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginStart="@dimen/editTextBoxMarginTop"
            android:layout_marginTop="@dimen/btnMarginTop"
            android:layout_marginEnd="@dimen/editTextBoxMarginTop"
            android:background="@drawable/edit_text_backgroud"
            android:gravity="center"
            android:paddingStart="@dimen/paddingStart"
            android:paddingEnd="@dimen/paddingStart"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/secondaryTxtSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alreadyAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>